--- a/templates/index.html
+++ b/templates/index.html
@@ -110,8 +110,8 @@
                                     <!-- Feature item-->
                                     <div class="text-center">
                                         <i class="bi-phone icon-feature text-gradient d-block mb-3"></i>
-                                        <h3 class="font-alt">Device Mockups</h3>
-                                        <p class="text-muted mb-0">Ready to use HTML/CSS device mockups, no Photoshop required!</p>
+                                        <h3 class="font-alt">{{feature.name}}</h3>
+                                        <p class="text-muted mb-0">{{feature.detail}}</p>
                                     </div>
                                 </div>
                                 <div class="col-md-6 mb-5">
